--- a/src/index.html
+++ b/src/index.html
@@ -9,22 +9,7 @@
 	<nav class="navbar navbar-expand-lg navbar-light ">
 		<div class="container">
 			<a class="navbar-brand" href="#">Marks Manager</a>
-			
-			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-				<ul class="navbar-nav ml-auto">
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							User
-						</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-							<div class="dropdown-item disabled"><p>Hello</p></div>
-							<div class="dropdown-divider"></div>
-							<a class="dropdown-item" href="#" data-toggle="modal" data-target="#SettingsModal">Settings</a>
-							<a class="dropdown-item" href="#">Logout</a>
-						</div>
-					</li>
-				</ul>
-			</div>	
+
 		</div>
 	</nav>
 	<br>
@@ -175,24 +160,17 @@
 				<div class="card">
 
 					<div class="card-body">
-						<p class="lead">Hello There! Please Login to your account</p>
-						<div class="form-group row">
-							<label for="email" class="col-sm-3 col-form-label">Email</label>
-							<div class="col-sm-9">
-								<input type="email" class="form-control" id="email" placeholder="Email">
-							</div>
+						<p class="lead">Hello There! Please Choose a Role to Check this Out!</p>
+						<div class="row">
+							<div class="col-md-3 offset-md-2">
+							<button type="button" class="btn btn-outline-primary btn-lg" id="switchTeacherBtn">Teacher</button>
 						</div>
-						<div class="form-group row">
-							<label for="password" class="col-sm-3 col-form-label">Password</label>
-							<div class="col-sm-9">
-								<input type="password" class="form-control" id="password" placeholder="Password">
-							</div>
+						<div class="col-md-3 offset-md-2">
+							<button type="button" class="btn btn-outline-secondary btn-lg" id="switchStudentBtn">Student</button>
 						</div>
-						<div class="form-group row">
-							<div class="col-sm-12 offset-sm-5">
-								<button type="submit" class="btn btn-primary">Sign in</button>
-							</div>
 						</div>
+
+						
 					</div>
 				</div>
 			</div>
@@ -205,5 +183,6 @@
 	</footer>
 	<script src="js/jquery.js"></script>
 	<script src="js/bootstrap.min.js"></script>
+	<script src="js/app.js"></script>
 </body>
 </html>
